# CUDA-clustalW

./: get_data.sh  make.sh
CPU/clustalw-2.0.11/: BB30001_cpu.fasta  BBA0001_cpu.fasta  BBA0190_cpu.fasta  Makefile  config.status  run1-cpu.txt  run2-cpu.txt  run3-cpu.txt
CPU/clustalw-2.0.11/m4/: Makefile
CPU/clustalw-2.0.11/src/: Makefile  config.h
CPU/clustalw-2.0.11/src/.deps/: AlignmentOutput.Po  Clustal.Po  ClustalFileParser.Po  ClusterTree.Po  ClusterTreeOutput.Po  CommandLineParser.Po  EMBLFileParser.Po  FileParser.Po  FullPairwiseAlign.Po  InteractiveMenu.Po  Iteration.Po  LowScoreSegProfile.Po  MyersMillerProfileAlign.Po  ObjectiveScore.Po  PIRFileParser.Po  ProfileBase.Po  RootedClusterTree.Po  RootedGuideTree.Po  RootedTreeOutput.Po  Stats.Po  SubMatrix.Po  SymMatrix.Po  Tree.Po  UPGMAAlgorithm.Po  main.Po
CPU/clustalw-2.0.11/src/substitutionMatrix/: SubMatrix.cpp  SubMatrix.h
GPU/cuda_clustalw_final/: BBA0001_gpu.fasta  BBA0190_gpu.fasta  Makefile  Makefile.in  config.status  configure  configure.ac  configure~  master-read.py  project_report-old.txt  project_report.txt  run1-gpu.txt  run2-gpu.txt  run3-gpu.txt
GPU/cuda_clustalw_final/autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.2
GPU/cuda_clustalw_final/m4/: Makefile  Makefile.in
GPU/cuda_clustalw_final/src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in
GPU/cuda_clustalw_final/src/.deps/: Alignment.Po  Clustal.Po  ClustalWResources.Po  FastPairwiseAlign.Po  FileReader.Po  GDEFileParser.Po  MSA.Po  MSFFileParser.Po  MyersMillerProfileAlign.Po  NJTree.Po  Node.Po  OutputFile.Po  PearsonFileParser.Po  ProfileStandard.Po  ProfileWithSub.Po  RSFFileParser.Po  Sequence.Po  SubMatrix.Po  TreeInterface.Po  UnRootedClusterTree.Po  UserParameters.Po  Utility.Po  cudaMultiSeqAlign.Po
GPU/cuda_clustalw_final/src/alignment/.deps/: Alignment.Po  AlignmentOutput.Po  ObjectiveScore.Po  Sequence.Po
GPU/cuda_clustalw_final/src/cuda/: cudaFullPairwiseAlign.cu
GPU/cuda_clustalw_final/src/cuda/.deps/: cudaMultiSeqAlign.Po
GPU/cuda_clustalw_final/src/fileInput/.deps/: ClustalFileParser.Po  EMBLFileParser.Po  FileParser.Po  FileReader.Po  GDEFileParser.Po  InFileStream.Po  MSFFileParser.Po  PIRFileParser.Po  PearsonFileParser.Po  RSFFileParser.Po
GPU/cuda_clustalw_final/src/general/.deps/: ClustalWResources.Po  DebugLog.Po  InvalidCombination.Po  OutputFile.Po  Stats.Po  SymMatrix.Po  UserParameters.Po  Utility.Po  VectorOutOfRange.Po
GPU/cuda_clustalw_final/src/interface/.deps/: CommandLineParser.Po  InteractiveMenu.Po
GPU/cuda_clustalw_final/src/multipleAlign/.deps/: Iteration.Po  LowScoreSegProfile.Po  MSA.Po  MyersMillerProfileAlign.Po  ProfileBase.Po  ProfileStandard.Po  ProfileWithSub.Po
GPU/cuda_clustalw_final/src/pairwise/.deps/: FastPairwiseAlign.Po  FullPairwiseAlign.Po
GPU/cuda_clustalw_final/src/substitutionMatrix/: SubMatrix.cpp
GPU/cuda_clustalw_final/src/substitutionMatrix/.deps/: SubMatrix.Po
GPU/cuda_clustalw_final/src/tree/.deps/: AlignmentSteps.Po  ClusterTree.Po  ClusterTreeOutput.Po  NJTree.Po  RandomGenerator.Po  Tree.Po  TreeInterface.Po  UnRootedClusterTree.Po
GPU/cuda_clustalw_final/src/tree/UPGMA/.deps/: Node.Po  RootedClusterTree.Po  RootedGuideTree.Po  RootedTreeOutput.Po  UPGMAAlgorithm.Po
data/RV100/: BBA0190.dnd
data/bb3_release/RV30/: GPU-BB30001.fasta
default-score/BAliBASE_R9/src/: README  bali_score  bali_score.c  bali_score_elm  bali_score_elm.c  clustalw.h  makefile  readxml.c  score.h  util.c
